schema_derive/tests/ui/fail/fail_on_enum.rs
use parameter_schema_derive::InputSchema;

#[derive(InputSchema)]
enum NotAStruct {
    A,
    B,
}

fn main() {}
